--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf node_modules package-lock.json && npm install && react-scripts build",
+    
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
