--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  
+
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
