--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "description": "",
 
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-scripts": "^5.0.1"
   }
 }
