--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 },
 
   "scripts": {
+    "preinstall": "npm install --legacy-peer-deps",
     "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
