--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
 },
 
   "scripts": {
-    "preinstall": "npm install --legacy-peer-deps",
+    "postinstall": "npm install react@18.3.1 react-dom@18.3.1",
     "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
