--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
   "d3": "^7.9.0",
   "html2pdf.js": "^0.10.2",
   "leaflet": "^1.9.4",
-  "react-chartjs-2": "^5.2.0",
   "react-icons": "^5.4.0",
   "react-modal": "^3.16.3",
   "react-router-dom": "^7.1.1",
@@ -28,11 +27,8 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "extends": "react-app"
+},
   "browserslist": {
     "production": [
       ">0.2%",
