--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "react-scripts": "^5.0.1",
-    "react-chartjs-2": "^5.2.0"
+    "react-scripts": "^5.0.1"
   }
 }
