--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,12 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-  "extends": "react-app"
+    
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+    
 },
   "browserslist": {
     "production": [
