--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-  "axios": "^1.7.9",
-  "chart.js": "^4.4.7",
-  "react": "^19.0.0",
-  "react-dom": "^19.0.0",
-  "react-leaflet": "^5.0.0",
-  "cra-template": "1.2.0",
-  "d3": "^7.9.0",
-  "html2pdf.js": "^0.10.2",
-  "leaflet": "^1.9.4",
-  "react-icons": "^5.4.0",
-  "react-modal": "^3.16.3",
-  "react-router-dom": "^7.1.1",
-  "react-scripts": "5.0.1",
-  "web-vitals": "^4.2.4"
-},
-
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "cra-template": "1.2.0",
+    "d3": "^7.9.0",
+    "html2pdf.js": "^0.10.2",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.4"
+  },
   "scripts": {
     "preinstall": "npm install react@19.0.0 react-dom@19.0.0",
     "start": "set PORT=3001 && react-scripts start",
@@ -27,13 +27,11 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    
     "extends": [
       "react-app",
       "react-app/jest"
     ]
-    
-},
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -45,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
