--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "d3": "^7.9.0",
+    "eslint-config-react-app": "^7.0.1",
     "html2pdf.js": "^0.10.2",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
@@ -15,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
+    "react-progressbar.js": "^0.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
@@ -28,8 +30,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint-plugin-react": "^7.37.3"
   }
 }
