--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@uiball/loaders": "^1.3.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "cookie": "^1.0.2",
     "cra-template": "1.2.0",
     "d3": "^7.9.0",
     "eslint-config-react-app": "^7.0.1",
     "html2pdf.js": "^0.10.2",
     "leaflet": "^1.9.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-circular-progressbar": "file:react-circular-progressbar-2.1.0.tgz",
+    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
+    "react-progressbar-circle": "^1.0.6",
     "react-progressbar.js": "^0.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
