--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "eslint-config-react-app": "^7.0.1",
     "html2pdf.js": "^0.10.2",
     "leaflet": "^1.9.4",
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
