--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "html2pdf.js": "^0.10.2",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
